--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "commonjs": "^0.0.1",
+    "json-server": "^0.16.3",
     "node-sass": "^5.0.0"
   }
 }
