--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "commonjs": "^0.0.1",
+    "hammerjs": "^2.0.8",
     "json-server": "^0.16.3",
-    "node-sass": "^5.0.0"
+    "node-sass": "^5.0.0",
+    "requirejs": "^2.3.6"
   }
 }
